refactor: refatora os componentes de MainQuestion para receber os novos atributos